# OptimizationMethods-Lab

./: CMakeLists.txt  README.md
Lab1/: Methods.cpp  Methods.hpp
Lab1/Test/: CMakeLists.txt  main.cpp
Lab2/: Methods.cpp  Methods.hpp
Lab2/Test/: CMakeLists.txt  main.cpp
Lab3/: Methods.cpp  Methods.hpp
Lab3/Test/: CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt
Lab4/Test/: CMakeLists.txt  main.cpp
