file(GLOB_RECURSE SRCS ${CMAKE_CURRENT_LIST_DIR} *.cpp *.c)
REMOVE_TEST_FILES_FUNCTION("${SRCS}" FILTERED_SRCS)
set(SRCS ${FILTERED_SRCS})


file(GLOB_RECURSE HDRS ${CMAKE_CURRENT_LIST_DIR} *.hpp *.h)
REMOVE_TEST_FILES_FUNCTION("${HDRS}" FILTERED_HDRS)
set(HDRS ${FILTERED_HDRS})

set(HEADERS_DIR ${CMAKE_CURRENT_LIST_DIR})

add_subdirectory(Test)